# ShredFinder

./: .gitignore  README.md  pyproject.toml  run_all.py
server/: config.py  main.py
server/api/: auth.py  detection.py  media.py  projects.py  render.py
server/data/: .gitignore  shredfinder.db
server/models/: __init__.py  base.py  media.py  project.py  user.py
server/services/: ffmpeg.py  proxy.py  renderer.py  storage.py
server/tasks/: detection.py  proxy.py  render.py
shredfinder/: __init__.py  __main__.py  cli.py  clipper.py  config.py  detector.py  edl_export.py  footage_dirs.py  gpmf_parser.py  gpx_export.py  reel.py  report.py  scanner.py  session.py  stats.py  telemetry.py  trail_map.py
tests/: test_detector.py  test_gpmf_parser.py  test_scanner.py  test_telemetry.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/Auth/: LoginPage.tsx
web/src/components/Inspector/: InspectorPanel.tsx
web/src/components/Layout/: AppShell.tsx  Toolbar.tsx
web/src/components/Preview/: PreviewPlayer.tsx
web/src/components/Timeline/: Playhead.tsx  TimeRuler.tsx  Timeline.tsx  TimelineClip.tsx  Track.tsx  TransitionHandle.tsx
web/src/hooks/: useKeyboardShortcuts.ts  useTimeline.ts
web/src/services/: api.ts  websocket.ts
web/src/stores/: authStore.ts  mediaStore.ts  projectStore.ts  timelineStore.ts
web/src/types/: index.ts
