[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shredfinder"
version = "0.1.0"
description = "Detect highlight moments in GoPro snowboard footage using embedded sensor data"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.scripts]
shredfinder = "shredfinder.cli:cli"

[tool.setuptools.packages.find]
include = ["shredfinder*"]
