[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shredfinder"
version = "0.1.0"
description = "Detect highlight moments in GoPro snowboard footage using embedded sensor data"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "numpy>=1.24",
    # Server dependencies
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "aiofiles>=24.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
    "websockets>=13.0",
]

[project.scripts]
shredfinder = "shredfinder.cli:cli"
shredfinder-server = "server.main:run"

[tool.setuptools.packages.find]
include = ["shredfinder*", "server*"]
